--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "build": "rimraf dist && tsc --build",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "prisma": "^4.5.0",
     "prisma-erd-generator": "^1.2.2",
+    "rimraf": "^3.0.2",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   },
