--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fastify/jwt": "^6.3.2",
     "@prisma/client": "^4.5.0",
     "axios": "^1.1.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
     "short-unique-id": "^4.4.4",
