--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "@fastify/cors": "^8.1.1",
     "@fastify/jwt": "^6.3.2",
+    "@fastify/swagger": "^8.3.1",
+    "@fastify/swagger-ui": "^1.5.0",
     "@prisma/client": "^4.5.0",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
